# kedro-mlops

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
conf/base/: catalog.yml  catalog_private.yml  mlflow.yml  parameters_logistic_regression.yml
conf/test/: catalog.yml  parameters.yml
src/kedro_mlops/: __init__.py  __main__.py  hooks.py  settings.py
src/kedro_mlops/pipelines/logistic_regression/: __init__.py  pipeline.py
src/kedro_mlops/pipelines/mod_linear_regression_training_pipeline/: __init__.py  pipeline.py
src/tests/pipelines/logistic_regression/: test_pipeline.py
tests/: test_run.py
