[project]
requires-python = ">=3.11"
name = "kedro_mlops"
readme = "README.md"
dynamic = ["version",]
dependencies = [
    "kedro>=0.19.12",
    "kedro-datasets[polars]>=6.0.0",
    "matplotlib>=3.10.1",
    "mlflow-skinny>=2.21.3",
    "pandas[aws]>=2.2.3",
    "polars-ds>=0.8.3",
    "polars[fsspec,pandas]>=1.27.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost-cpu>=3.0.0",
]

[project.scripts]
kedro-mlops = "kedro_mlops.__main__:main"

[tool.kedro]
package_name = "kedro_mlops"
project_name = "kedro-mlops"
kedro_init_version = "0.19.12"
tools = [ "Linting", "Testing", "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]

ignore = [ "E501",]
# select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
# By default, ruff only uses all "E" (pycodestyle) and "F" (pyflakes) rules.
# Here we append to the defaults.
extend-select = [
    # pycodestyle
    "W",

    # mccabe
    #"C90",

    # isort
    "I",

    # pep-naming
    #"N",

    # pydocstyle
    "D101",
    "D106",
    "D2",
    "D3",
    "D402",
    "D403",
    "D412",
    "D419",

    # pyupgrade
    "UP",

    # flake8-2020
    "YTT",

    # flake8-annotations
    #"ANN",

    # flake8-bandit
    #"S",

    # flake8-blind-except
    #"BLE",

    # flake8-boolean-trap
    #"FBT",

    # flake8-bugbear
    "B",

    # flake8-builtins
    "A",

    # flake8-comprehensions
    "C4",

    # flake8-datetimez
    "DTZ",

    # flake8-errmsg
    #"EM",

    # flake8-import-conventions
    "ICN",

    # flake8-logging-format
    #"G",

    # flake8-pie
    "PIE",

    # flake8-pyi
    "PYI",

    # flake8-quotes
    "Q",

    # flake8-self
    "SLF",

    # flake8-simplify
    "SIM",

    # flake8-tidy-imports
    "TID",

    # flake8-type-checking
    "TCH",

    # flake8-unused-arguments
    "ARG",

    # pandas-vet
    "PD",

    # pylint
    "PLE",
    "PLR",
    "PLW",

    # NumPy-specific rules
    "NPY",

    # ruff specific ones:
    "RUF",
]

extend-ignore = [
    # 1 blank line required between summary line and description
    "D205",
    # Too many arguments to function call
    "PLR0913",
    # Magic number
    "PLR2004",
    # Pandas
    "PD901",
]

[tool.ruff.lint.per-file-ignores]
"src/kedro_mlops/library/mlflow/schemas.py" = ["D101", "D106"]
"src/tests/*" = ["SLF001", "ARG001"]

[tool.ruff.lint.pydocstyle]

# Enforce google-style docstrings. This is equivalent to ignoring a large number of pydocstyle (D)
# rules incompatible with google-style docstrings. See:
# https://google.github.io/styleguide/pyguide.html#383-functions-and-methods
convention = "google"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/kedro_mlops -ra"

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.coverage.run]
omit = [
    # small wrappers around well-tested classes and methods
    "src/kedro_mlops/library/preprocessing/nodes.py",
    "src/kedro_mlops/library/evaluation/nodes.py",
    # plotting methods and custom MLFlow evaluators
    "src/kedro_mlops/library/evaluation/mlflow_evaluator.py",
    # Pydantic classes with no logic
    "src/kedro_mlops/library/mlflow/schemas.py",
    # kedro project template code, mostly generated by cookiecutter
    "src/kedro_mlops/pipelines/*",
    "src/kedro_mlops/__main__.py",
    "src/kedro_mlops/pipeline_registry.py",
    "src/kedro_mlops/settings.py",
]

[dependency-groups]
dev = [
    "mlflow>=2.21.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.0",
]
